                         CHANGES version 2.11.4

              This file summarizes changes made since 1.0

Version 2.11.4
--------------
* Fixes: Oracle: OCIPing is used to check oracle connection and
  ensure that the Pool returns connected connections. Thanks to
  Pavlo Lavrenenko.

Version 2.11.3
--------------
* New: License exception added to allow for linking and 
  distributing this Software together with OpenSSL.

Version 2.11.2
--------------
* New: Throw SQLException if a database access error occurs
  when ResultSet_next() is called. Previously, access errors
  could be masked as end of result set. Thanks to JiaQiang Xu.
* Fixes: Possible mem leak in Oracle's blob operation fixed 
  (Volodymyr Tarasenko)

Version 2.11.1
--------------
* Fixes: MySQL: Fixed a ResultSet bind memory error which could occur
  if string or blob columns of different size caused successive buffer
  reallocation. Thanks to Ryan Addams for discovering the problem.

Version 2.11
------------
* New: Added support for the new bytea hex encoding format
  introduced in PostgreSQL 9.0.
* Fixes: MySQL: A table with two or more columns larger than 256
  bytes would cause libzdb to truncate the second column to 256 
  bytes in the first row. Thanks to Me from China for bug report
  and patch.
* Fixes: Using configure flags --with-xxx without arguments
  now works as expected. Thanks to Johan Bergström for report

Version 2.10.6
--------------
* New: ConnectionPool_start() now throws an SQLException instead
  of calling ABORT if starting the pool failed. Thanks to
  Christopher O'Hara for suggestion.
* Fixes: MySQL: Using a stored procedure which returned a
  result set would freeze the connection until it was reaped.
  Thanks to Jesse White for patch.
* Fixes: Ensure that the library can be restarted after it was 
  stopped without leaking resources. Only applicable for MySQL
  which could leak memory on runtime restart. Thanks to Axel 
  Steiner for initial patch and suggestion.
